get input value and set element inner text function added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="w-1/2 text-center">
                     <h3 class="text-3xl font-medium mb-12">---SALE FEVER---</h3>
                     <h1 class="text-5xl font-bold">Purchase TK 200 or above & get <span>20% off</span></h1>
-                    <span>Use Promo Code</span><button class="btn btn-primary">Get Started</button>
+                    <span>Use Promo Code</span><button class="btn btn-primary">SELL200</button>
                 </div>
             </div>
         </div>
@@ -45,9 +45,9 @@
         <section class="w-9/12">
             <h3 class="text-4xl font-semibold mb-8">Kitchenware</h3>            
             <div class="grid grid-cols-3">
-                <div class="card w-80 bg-base-200">
+                <div id="card-1" class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod1.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod1.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -64,7 +64,7 @@
                 </div>
                 <div class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod2.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod2.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod3.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod3.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -102,7 +102,7 @@
             <div class="grid grid-cols-3">
                 <div class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod4.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod4.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod5.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod5.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -136,7 +136,7 @@
                 </div>
                 <div class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod6.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod6.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -157,7 +157,7 @@
             <div class="grid grid-cols-3">
                 <div class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod7.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod7.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -174,7 +174,7 @@
                 </div>
                 <div class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod8.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod8.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -191,7 +191,7 @@
                 </div>
                 <div class="card w-80 bg-base-200">
                     <figure class="px-10 pt-10">
-                        <img src="/images/prod9.png" alt="Shoes" class="rounded-xl" />
+                        <img src="/images/prod9.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
@@ -214,13 +214,16 @@
             <h3>Have coupon?</h3>
             <div class="flex">
                 <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
-                <button class="btn btn-secondary">Secondary</button>
+                <button class="btn btn-secondary">Apply</button>
             </div>
             <h3>Total Price :</h3>
             <h3>Discount :</h3>
             <h3>Total :</h3>
+            <button class="btn btn-secondary">Make Purchase</button>
         </section>
     </main>
+
+    <script src="Js/index.js"></script>
 
 </body>
 
