--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
         <!-- Card Section -->
         <section class="lg:w-9/12">
             <h3 class="text-4xl font-semibold mb-8">Kitchenware</h3>
-            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card-1 -->
-                <div id="card-1" onclick="addCard1()" class="card bg-base-200 mb-4 gap-4">
-                    <figure class="px-10 pt-10">
+                <div id="card-1" onclick="addCard1()" class="card mb-4 gap-4">
+                    <figure class="px-10 pt-10 pb-3 bg-base-200">
                         <img src="/images/prod1.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <div class="rating">
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
                           </div>
                         <h2 id="card-1-name" class="card-title text-lg font-semibold">Spoon Sets</h2>
                         <p class="text-lg font-normal"> <span id="card-1-price">39.00</span> TK</p>
@@ -78,8 +78,8 @@
                     </div>
                 </div>
                 <!-- Card-2 -->
-                <div id="card-2" onclick="addCard2()" class="card  bg-base-200 mb-4">
-                    <figure class="px-10 pt-10">
+                <div id="card-2" onclick="addCard2()" class="card mb-4">
+                    <figure class="px-10 pt-10 bg-base-200">
                         <img src="/images/prod2.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -96,8 +96,8 @@
                     </div>
                 </div>
                 <!-- Card-3 -->
-                <div id="card-3" onclick="addCard3()" class="card  bg-base-200 mb-4">
-                    <figure class="px-10 pt-10">
+                <div id="card-3" onclick="addCard3()" class="card mb-4">
+                    <figure class="px-10 pt-10 pb-3 bg-base-200">
                         <img src="/images/prod3.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -116,10 +116,10 @@
             </div>
 
             <h3 class="text-4xl font-semibold mt-14 mb-8">Sportswear</h3>
-            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card-4 -->
-                <div id="card-4" onclick="addCard4()" class="card bg-base-200 mb-4">
-                    <figure class="px-10 pt-10">
+                <div id="card-4" onclick="addCard4()" class="card mb-4">
+                    <figure class="px-10 pt-10 pb-4 bg-base-200">
                         <img src="/images/prod4.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -136,8 +136,8 @@
                     </div>
                 </div>
                 <!-- Card-5 -->
-                <div id="card-5" onclick="addCard5()" class="card bg-base-200 mb-4">
-                    <figure class="px-10 pt-10">
+                <div id="card-5" onclick="addCard5()" class="card mb-4">
+                    <figure class="px-10 pt-10 bg-base-200">
                         <img src="/images/prod5.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -154,8 +154,8 @@
                     </div>
                 </div>
                 <!-- Card-6 -->
-                <div id="card-6" onclick="addCard6()" class="card bg-base-200 mb-4">
-                    <figure class="px-10 pt-10">
+                <div id="card-6" onclick="addCard6()" class="card mb-4">
+                    <figure class="px-10 pt-10 bg-base-200">
                         <img src="/images/prod6.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -175,9 +175,9 @@
 
             <h3 class="text-4xl font-semibold mt-14 mb-8">Furniture</h3>
             <!-- Card-7 -->
-            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <div id="card-7" onclick="addCard7()" class="card bg-base-200 mb-4">
-                    <figure class="px-10 pt-10">
+            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div id="card-7" onclick="addCard7()" class="card mb-4">
+                    <figure class="px-10 pt-10 bg-base-200">
                         <img src="/images/prod7.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -194,8 +194,8 @@
                     </div>
                 </div>
                 <!-- Card-8 -->
-                <div id="card-8" onclick="addCard8()" class="card bg-base-200 mb-4">
-                    <figure class="px-10 pt-10">
+                <div id="card-8" onclick="addCard8()" class="card  mb-4">
+                    <figure class="px-10 pt-10 pb-2 bg-base-200">
                         <img src="/images/prod8.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -212,8 +212,8 @@
                     </div>
                 </div>
                 <!-- Card-9 -->
-                <div id="card-9" onclick="addCard9()" class="card bg-base-200 mb-4">
-                    <figure class="px-10 pt-10">
+                <div id="card-9" onclick="addCard9()" class="card mb-4">
+                    <figure class="px-10 pt-10 pb-3 bg-base-200">
                         <img src="/images/prod9.png" alt="Product" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -236,27 +236,28 @@
         <section class="sm:w-auto lg:w-3/12 text-2xl lg:ml-12 mt-4">
             <h3 class="mt-32 mb-4">Have coupon?</h3>
             <div class="flex mb-12">
-                <input id="coupon-field" type="text" placeholder="Type here"
+                <input id="coupon-field" type="text" placeholder="Coupon code"
                     class="input input-bordered w-full max-w-xs" />
-                <button id="btn-coupon" onclick="applyDiscount()" disabled class="btn btn-secondary">Apply</button>
+                <button id="btn-coupon" onclick="applyDiscount()" disabled class="btn btn-secondary rounded-r-lg">Apply</button>
             </div>
             <div id="added-product" class="mb-6"></div>
-            <hr class="mb-4">
+            <hr class="mb-4 border-slate-300">
             <h3 id="totalPrice" class="mb-4">Total Price : <span id="total-price">0</span></h3>
             <h3 class="mb-4 mt-4">Discount : <span id="discount-amount">0</span></h3>
 
             <h3 class="mb-4">Total : <span id="grand-total">0</span></h3>
-            <button id="btn-purchase" onclick="my_modal_5.showModal()" disabled class="btn btn-secondary mb-8">Make
+            <hr class="border-slate-300">
+            <button id="btn-purchase" onclick="my_modal_5.showModal()" disabled class="btn btn-secondary mb-8 mt-4">Make
                 Purchase</button>
             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
                 <form method="dialog" class="modal-box">
                     <div class="flex justify-center">
                         <img src="./images/congo.png" alt="">
                     </div>
-                    <h3 class="font-bold text-lg text-center">Congratulations</h3>
-                    <p class="py-4 text-center">You Purchase the products</p>
+                    <h3 class="font-bold text-5xl text-center">Congratulations</h3>
+                    <p class="py-4 text-center text-lg">You Purchase the products</p>
                     <div class="flex justify-center">
-                        <button onclick="resetAll()" class="btn">Go Home</button>
+                        <button onclick="resetAll()" class="btn btn-secondary">Go Home</button>
                     </div>
                 </form>
             </dialog>
