--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h3 class="text-4xl font-semibold mb-8">Kitchenware</h3>
             <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card-1 -->
-                <div id="card-1" onclick="addCard1()" class="card mb-4 gap-4">
+                <div id="card-1" onclick="addCard1()" class="card mb-4 gap-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 pb-3 bg-base-200">
                         <img src="/images/prod1.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <!-- Card-2 -->
-                <div id="card-2" onclick="addCard2()" class="card mb-4">
+                <div id="card-2" onclick="addCard2()" class="card mb-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 bg-base-200">
                         <img src="/images/prod2.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <!-- Card-3 -->
-                <div id="card-3" onclick="addCard3()" class="card mb-4">
+                <div id="card-3" onclick="addCard3()" class="card mb-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 pb-3 bg-base-200">
                         <img src="/images/prod3.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -118,7 +118,7 @@
             <h3 class="text-4xl font-semibold mt-14 mb-8">Sportswear</h3>
             <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card-4 -->
-                <div id="card-4" onclick="addCard4()" class="card mb-4">
+                <div id="card-4" onclick="addCard4()" class="card mb-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 pb-4 bg-base-200">
                         <img src="/images/prod4.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <!-- Card-5 -->
-                <div id="card-5" onclick="addCard5()" class="card mb-4">
+                <div id="card-5" onclick="addCard5()" class="card mb-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 bg-base-200">
                         <img src="/images/prod5.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <!-- Card-6 -->
-                <div id="card-6" onclick="addCard6()" class="card mb-4">
+                <div id="card-6" onclick="addCard6()" class="card mb-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 bg-base-200">
                         <img src="/images/prod6.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -176,7 +176,7 @@
             <h3 class="text-4xl font-semibold mt-14 mb-8">Furniture</h3>
             <!-- Card-7 -->
             <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div id="card-7" onclick="addCard7()" class="card mb-4">
+                <div id="card-7" onclick="addCard7()" class="card mb-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 bg-base-200">
                         <img src="/images/prod7.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -194,7 +194,7 @@
                     </div>
                 </div>
                 <!-- Card-8 -->
-                <div id="card-8" onclick="addCard8()" class="card  mb-4">
+                <div id="card-8" onclick="addCard8()" class="card  mb-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 pb-2 bg-base-200">
                         <img src="/images/prod8.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <!-- Card-9 -->
-                <div id="card-9" onclick="addCard9()" class="card mb-4">
+                <div id="card-9" onclick="addCard9()" class="card mb-4 hover:cursor-pointer">
                     <figure class="px-10 pt-10 pb-3 bg-base-200">
                         <img src="/images/prod9.png" alt="Product" class="rounded-xl" />
                     </figure>
@@ -242,10 +242,10 @@
             </div>
             <div id="added-product" class="mb-6"></div>
             <hr class="mb-4 border-slate-300">
-            <h3 id="totalPrice" class="mb-4">Total Price : <span id="total-price">0</span></h3>
-            <h3 class="mb-4 mt-4">Discount : <span id="discount-amount">0</span></h3>
+            <h3 id="totalPrice" class="mb-4">Total Price : <span id="total-price">0</span> TK</h3>
+            <h3 class="mb-4 mt-4">Discount : <span id="discount-amount">0</span> TK</h3>
 
-            <h3 class="mb-4">Total : <span id="grand-total">0</span></h3>
+            <h3 class="mb-4">Total : <span id="grand-total">0</span> TK</h3>
             <hr class="border-slate-300">
             <button id="btn-purchase" onclick="my_modal_5.showModal()" disabled class="btn btn-secondary mb-8 mt-4">Make
                 Purchase</button>
